--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-qr-code": "^2.0.12"
+    "react-qr-code": "^2.0.12",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
