--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
